--- a/sumabox/css/main.css
+++ b/sumabox/css/main.css
@@ -525,6 +525,11 @@ video {
   img#joker {
     width: 25px;
   }
+  img.pulse {
+    width: 52px;
+    height: auto;
+    top: -67px;
+  }
   div.interactive {
     width: 100%;
     height: 40dvh;
@@ -681,6 +686,11 @@ video {
   img#joker {
     width: 30px;
   }
+  img.pulse {
+    width: 62px;
+    height: auto;
+    top: -92px;
+  }
   div.interactive {
     width: 95%;
     height: 20dvh;
@@ -821,7 +831,11 @@ video {
     padding: 2px;
   }
   img#joker {
-    width: 40px;
+    width: 42px;
+  }
+  img.pulse {
+    width: 87px;
+    height: auto;
   }
   div.interactive {
     width: 95%;
@@ -919,8 +933,10 @@ video {
     height: 70px;
     padding: 2px;
   }
-  img#joker {
-    width: 40px;
+  img.pulse {
+    width: 87px;
+    height: auto;
+    top: -122px;
   }
   div.interactive {
     width: 95%;
@@ -1054,8 +1070,10 @@ video {
     height: 75px;
     padding: 2px;
   }
-  img#joker {
-    width: 45px;
+  img.pulse {
+    width: 87px;
+    height: auto;
+    top: -135px;
   }
   div.interactive {
     width: 95%;
@@ -1070,7 +1088,7 @@ video {
     left: 0;
   }
 }
-/*------------Responsive Rules CLASSIC SCREEN---------*/
+/*------------Responsive Rules CLASSIC SCREEN from Gameplay.scss file for orginal rules---------*/
 @media only screen and (min-width: 1024px) {
   #mute {
     top: 10%;
@@ -1206,7 +1224,12 @@ video {
     padding: 2px;
   }
   img#joker {
-    width: 38px;
+    width: 43px;
+    height: auto;
+  }
+  img.pulse {
+    width: 87px;
+    height: auto;
   }
   div.interactive {
     width: 70%;
@@ -1355,6 +1378,11 @@ video {
   }
   img#joker {
     width: 70px;
+  }
+  img.pulse {
+    width: 138px;
+    height: auto;
+    top: -212px;
   }
   div.interactive {
     width: 95%;
@@ -1524,6 +1552,7 @@ fieldset {
   backdrop-filter: blur(2px);
   background-color: rgba(252, 244.5714285714, 216, 0.9);
   box-shadow: 1px 6px 12px rgba(0, 0, 0, 0.6);
+  z-index: 1000;
 }
 
 .resultloser {
@@ -1603,8 +1632,16 @@ fieldset {
 }
 
 #joker {
-  width: 38px;
+  width: 43px;
   height: auto;
+}
+
+.pulse {
+  position: relative;
+  top: -122px;
+  width: 87px;
+  height: auto;
+  z-index: 1;
 }
 
 #btn2 {
